# firesight-ecemae148-team4

./: README.md
firetruck_ws/src/robot_pkg/robot_pkg/: test_rpm_steering_node.py  test_vesc_node.py  vesc.py
overhead/firetruck_ws/: hsv_debug.py
overhead/firetruck_ws/install/: local_setup.sh  setup.sh
overhead/firetruck_ws/install/overhead_pkg/lib/overhead_pkg/: overhead_node
overhead/firetruck_ws/install/overhead_pkg/share/overhead_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
overhead/firetruck_ws/src/overhead_pkg/: package.xml  setup.py
overhead/firetruck_ws/src/overhead_pkg/overhead_pkg/: config.py  fire_detection.py  measurements.py  overhead_node.py  pathfinding.py  robot_detection.py  utils.py
robocar/firetruck_ws/: .env  docker-compose.yml
robocar/firetruck_ws/docker/: Dockerfile
robocar/firetruck_ws/src/robot_pkg/: package.xml  setup.py
robocar/firetruck_ws/src/robot_pkg/launch/: robot.launch.py
robocar/firetruck_ws/src/robot_pkg/robot_pkg/: config.py  nav_node.py  test_node.py
